--- a/build.gradle
+++ b/build.gradle
@@ -17,17 +17,28 @@ sourceCompatibility = 1.8
 
 mainClassName = "me.keroxp.bot.ApplicationKt"
 
+ext {
+    kotlinVersion = "1.0.2"
+}
+
 repositories {
     mavenCentral()
     jcenter()
 }
 
+defaultTasks "dist"
+
+task dist {
+    dependsOn "clean", "installDist"
+}
+
 task stage {
-    dependsOn build
+    dependsOn "dist"
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.1"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-runtime:$kotlinVersion"
     compile "org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE"
     compile 'com.github.kittinunf.fuel:fuel:1.3.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
