--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 apply plugin: 'application'
 apply plugin: 'kotlin'
+apply plugin: 'groovy'
 
 sourceCompatibility = 1.8
 
@@ -24,6 +25,9 @@ ext {
 repositories {
     mavenCentral()
     jcenter()
+    maven {
+        url "http://repository.jetbrains.com/all"
+    }
 }
 
 defaultTasks "dist"
@@ -37,9 +41,17 @@ task stage {
 }
 
 dependencies {
+    compile "com.linecorp.bot:line-bot-api-client:0.2.0"
+    compile "com.linecorp.bot:line-bot-model:0.2.0"
+    compile "com.linecorp.bot:line-bot-servlet:0.2.0"
+    compile "com.linecorp.bot:line-bot-spring-boot:0.2.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     compile "org.jetbrains.kotlin:kotlin-runtime:$kotlinVersion"
     compile "org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE"
-    compile 'com.github.kittinunf.fuel:fuel:1.3.1'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.codehaus.groovy:groovy-all:2.4.1"
+    testCompile 'org.springframework.boot:spring-boot-starter-test:1.3.5.RELEASE'
+    testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+    testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
+    testRuntime "cglib:cglib-nodep:3.1"          // allows mocking of classes (in addition to interfaces)
+    testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
 }
